# LibP2P-Vapoursynth

./: LibP2P.sln  LibP2P.vcxproj  LibP2P.vcxproj.filters  README.md  meson.build
msvc/: LibP2P.vcxproj  LibP2P.vcxproj.filters
src/: libp2p_plugin.cpp  p2p_api.cpp  vs_plugin.cpp
